--- a/Dockerfile.data-backend.railway
+++ b/Dockerfile.data-backend.railway
@@ -116,17 +116,19 @@ RUN apk add --no-cache openssl
 RUN pnpm install --force
 
 # RUN pnpm run build:prisma-db
-RUN pnpm run build:backend:prisma
-RUN pnpm run build:indexer-prisma
+# RUN pnpm run build:backend:prisma
+# RUN pnpm run build:indexer-prisma
 # RUN pnpm run build:backend:all_repo
 # Build the indexer-prisma package
-RUN pnpm --filter indexer-prisma build
+# RUN pnpm --filter indexer-prisma build
 
 # Build the data-backend package
 # RUN pnpm --filter data-backend build:all_repo
 # RUN pnpm --filter data-backend build:all 
 # RUN pnpm --filter data-backend build:prisma
 # RUN pnpm --filter data-backend build
+
+RUN pnpm --filter data-backend build:all
 
 # Use a smaller production base image
 FROM node:20-alpine AS production
