--- a/packages/indexer-prisma/package.json
+++ b/packages/indexer-prisma/package.json
@@ -7,10 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx prisma generate && npx prisma db pull && tsc",
     "build:push": "npx prisma generate && npx prisma db push && tsc",
-    "generate":"npx prisma generate",
-    "pull":"npx prisma db pull",
-    "push":"npx prisma db push" ,
-    "prisma:setup": "npx prisma generate && npx prisma db push"
+    "generate": "npx prisma generate",
+    "pull": "npx prisma db pull",
+    "push": "npx prisma db push"
   },
   "keywords": [],
   "author": "",
