--- a/packages/prisma-db/package.json
+++ b/packages/prisma-db/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx prisma generate && npx prisma db pull && tsc",
+    "build:push": "npx prisma generate && npx prisma db push && tsc",
     "generate": "npx prisma generate",
     "pull": "npx prisma db pull",
     "push": "npx prisma db push"
