feat: simplify dockerFile indexer

--- a/apps/nestjs-indexer/package.json
+++ b/apps/nestjs-indexer/package.json
@@ -7,6 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
+    "build:all": "pnpm -w run build:indexer-prisma && npm run build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "format:check": "prettier --check \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
