--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -6,18 +6,17 @@
   "scripts": {
     "build": "tsc",
     "build:index": "tsc",
-    "build:all_repo": "pnpm -w run build:indexer-prisma && pnpm run prisma:setup && tsc",
-    "build:all": "pnpm run prisma:setup && tsc",
-    "build:prisma": "pnpm run prisma:setup",
+    "build:all_repo": "pnpm run build:all",
+    "build:all": "pnpm -w run build:indexer-prisma && pnpm -w run build:prisma-db && pnpm build",
+    "build:prisma": "",
     "start": "ts-node src/index.ts",
     "start:dev": "ts-node-dev src/index.ts",
     "start:prod": "ts-node dist/index.js",
     "start:node": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prisma:generate": "npx prisma generate",
-    "prisma:push": "npx prisma db push",
-    "prisma:setup": "npx prisma generate && npx prisma db pull",
-    "prisma:setup_push": "npx prisma generate && npx prisma db push",
+    "prisma:generate": "",
+    "prisma:push": "",
+    "prisma:setup": "",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx}\"",
     "ts:check": "tsc --noEmit"
@@ -52,6 +51,7 @@
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "pg-promise": "^11.10.1",
+    "prisma-db": "workspace:*",
     "socket.io": "^4.8.1",
     "stripe": "^17.3.1",
     "telegraf": "^4.16.3",
@@ -64,7 +64,6 @@
     "@types/fluent-ffmpeg": "^2.1.27",
     "@types/node": "^20.17.6",
     "fastify": "^4.28.1",
-    "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsup": "^8.3.5",
