--- a/packages/prisma-db/package.json
+++ b/packages/prisma-db/package.json
@@ -2,11 +2,11 @@
   "name": "prisma-db",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
-  "types": "src/index.d.ts",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx prisma generate && npx prisma db pull && tsc",
+    "build:push": "npx prisma generate && npx prisma db push && tsc",
     "generate": "npx prisma generate",
     "pull": "npx prisma db pull",
     "push": "npx prisma db push"
