--- a/packages/afk_react_sdk/package.json
+++ b/packages/afk_react_sdk/package.json
@@ -19,21 +19,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "tsup": "^8.0.2",
+    "@argent/tma-wallet": "^1.19.3",
     "axios": "^1.7.2",
+    "common": "workspace:*",
     "dotenv": "^16.4.5",
     "starknet": "^6.6.6",
-    "common": "workspace:*"
+    "tsup": "^8.0.2"
   },
   "devDependencies": {
-    "starknet": "^6.6.6",
-    "tsup": "^8.0.2",
-    "typescript": "~5.3.3",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "starknet": "^6.6.6",
+    "tsup": "^8.0.2",
+    "typescript": "~5.3.3"
   }
 }
