--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -56,7 +56,9 @@
     "viem": "~2.21.2",
     "wagmi": "^2.12.8",
     "zod": "^3.23.8",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "afk_react_sdk": "workspace:*",
+    "afk_sdk": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^20",
