fix import and tsconfig

--- a/apps/pwa/tsconfig.json
+++ b/apps/pwa/tsconfig.json
@@ -30,7 +30,9 @@
         "./src/*"
       ],
       "pixel_ui": ["../../packages/pixel_ui/src"],
-      "common": ["../../packages/common/src"]
+      "common": ["../../packages/common/src"],
+      "afk_sdk": ["../../packages/afk_sdk/src"],
+      "afk_react_sdk": ["../../packages/afk_react_sdk/src"]
     },
     "noEmit": true
   },
