--- a/packages/afk_nostr_sdk/package.json
+++ b/packages/afk_nostr_sdk/package.json
@@ -24,9 +24,9 @@
     "@nostr-dev-kit/ndk": "^2.10.1",
     "@nostr-dev-kit/ndk-wallet": "^0.2.0",
     "@scure/base": "1.1.5",
-    "@scure/bip39": "^1.5.0",
     "@tanstack/react-query": "^5.40.0",
     "@webbtc/webln-types": "^2.1.0",
+    "bip39": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "zustand": "^4.5.2"
