chore: disable format and linter

--- a/.github/workflows/afk-nostr-sdk.yml
+++ b/.github/workflows/afk-nostr-sdk.yml
@@ -52,11 +52,11 @@ jobs:
             pnpm install
           fi
 
-      - name: Prettier Format Check
-        run: pnpm format:check
-
-      - name: ESLint Check
-        run: pnpm lint
+#      - name: Prettier Format Check
+#        run: pnpm format:check
+#
+#      - name: ESLint Check
+#        run: pnpm lint
 
       - name: TypeScript Check
         run: pnpm ts:check
