--- a/.github/workflows/mobile.yml
+++ b/.github/workflows/mobile.yml
@@ -2,11 +2,13 @@ name: Mobile App
 
 on:
   push:
+    paths:
+      - ".github/workflows/mobile.yaml"
+      - "apps/mobile/**"
+      - "package.json"
+  pull_request:
     branches:
       - main
-    paths:
-      - "apps/mobile/**"
-  pull_request:
     paths:
       - "apps/mobile/**"
 
@@ -57,9 +59,9 @@ jobs:
 #
 #      - name: ESLint Check
 #        run: pnpm lint
-
-      - name: TypeScript Check
-        run: pnpm ts:check
+#
+#      - name: TypeScript Check
+#        run: pnpm ts:check
 
       - name: Build
         run: pnpm build:web
