--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -41,6 +41,7 @@
     "@getalby/bitcoin-connect-react": "^3.5.3",
     "@getalby/lightning-tools": "^5.0.3",
     "@getalby/sdk": "^3.6.1",
+    "@metamask/sdk": "~0.30.0",
     "@noble/curves": "^1.4.0",
     "@nostr-dev-kit/ndk": "2.10.1",
     "@nostr-dev-kit/ndk-wallet": "^0.2.0",
