--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -2,11 +2,13 @@ name: Backend
 
 on:
   push:
+    paths:
+      - ".github/workflows/backend.yml"
+      - "backend/**"
+      - "package.json"
+  pull_request:
     branches:
       - main
-    paths:
-      - "backend/**"
-  pull_request:
     paths:
       - "backend/**"
 
