--- a/.github/workflows/nestjs-indexer.yml
+++ b/.github/workflows/nestjs-indexer.yml
@@ -1,6 +1,16 @@
 name: NestJS Indexer App
 
-on: [push, pull_request]
+on:
+  push:
+    paths:
+      - ".github/workflows/nestjs-indexer.yml"
+      - "apps/nestjs-indexer/**"
+      - "package.json"
+  pull_request:
+    branches:
+      - main
+    paths:
+      - "apps/nestjs-indexer/**"
 
 jobs:
   check-app:
