--- a/.github/workflows/expo-mobile.yml
+++ b/.github/workflows/expo-mobile.yml
@@ -1,12 +1,14 @@
-name: Mobile App Android & IOS
+name: Expo Mobile App Android & IOS
 
 on:
   push:
+    paths:
+      - ".github/workflows/expo-mobile.yaml"
+      - "apps/mobile/**"
+      - "package.json"
+  pull_request:
     branches:
       - main
-    paths:
-      - "apps/mobile/**"
-  pull_request:
     paths:
       - "apps/mobile/**"
 
@@ -52,14 +54,14 @@ jobs:
             pnpm install
           fi
 
-      - name: Prettier Format Check
-        run: pnpm format:check
-
-      - name: ESLint Check
-        run: pnpm lint
-
-      - name: TypeScript Check
-        run: pnpm ts:check
+#      - name: Prettier Format Check
+#        run: pnpm format:check
+#
+#      - name: ESLint Check
+#        run: pnpm lint
+#
+#      - name: TypeScript Check
+#        run: pnpm ts:check
 
       - name: Build android
         run: pnpm build:android
