--- a/.github/workflows/expo-web.yml
+++ b/.github/workflows/expo-web.yml
@@ -1,12 +1,14 @@
-name: Mobile App
+name: Expo Web App
 
 on:
   push:
+    paths:
+      - ".github/workflows/expo-web.yaml"
+      - "apps/mobile/**"
+      - "package.json"
+  pull_request:
     branches:
       - main
-    paths:
-      - "apps/mobile/**"
-  pull_request:
     paths:
       - "apps/mobile/**"
 
@@ -57,17 +59,11 @@ jobs:
 #
 #      - name: ESLint Check
 #        run: pnpm lint
-
-      - name: TypeScript Check
-        run: pnpm ts:check
+#
+#      - name: TypeScript Check
+#        run: pnpm ts:check
 
       - name: Build
         run: pnpm build:web
-
-      - name: Build android
-        run: pnpm build:android
-
-      - name: Build IOS
-        run: pnpm build:ios
 
 
