--- a/.github/workflows/expo-web.yml
+++ b/.github/workflows/expo-web.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Build
         run: pnpm build:web
 
-      - name: Start
-        run: pnpm start:web
+      # - name: Start
+      #   run: pnpm start:web
 
 
