--- a/.github/workflows/expo-mobile.yml
+++ b/.github/workflows/expo-mobile.yml
@@ -64,7 +64,7 @@ jobs:
 #        run: pnpm ts:check
 
       - name: Build android
-        run: pnpm build:android
+        run: eas build -p android
 
       - name: Build IOS
         run: pnpm build:ios
