Fix/please dev do something (#404)
* add package

* start  new endpoint and check hooks

* continue launchpad test

* scarb fmt

* undo start because never closed

* run build android command

* add setup android build

* install eas

--- a/.github/workflows/expo-mobile.yml
+++ b/.github/workflows/expo-mobile.yml
@@ -63,8 +63,20 @@ jobs:
 #      - name: TypeScript Check
 #        run: pnpm ts:check
 
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'zulu'
+          java-version: '17'
+
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
+
+      - name: Install EAS CLI
+        run: pnpm install -g eas-cli
+
       - name: Build android
-        run: pnpm build:android
+        run: eas build -p android
 
       - name: Build IOS
         run: pnpm build:ios
