--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -7,6 +7,7 @@
     "dev": "expo start",
     "build:web": "npx expo export --platform web",
     "start": "expo start",
+    "start:web": "expo start --web",
     "start:tunnel": "expo start --tunnel",
     "android": "expo run:android",
     "build:android": "expo build:android",
@@ -133,7 +134,8 @@
     "text-encoding": "^0.7.0",
     "viem": "2.x",
     "wagmi": "^2.12.8",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "@scure/bip39": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
