--- a/.github/workflows/data-backend.yml
+++ b/.github/workflows/data-backend.yml
@@ -54,8 +54,8 @@ jobs:
             pnpm install
           fi
 
-      - name: Prettier Format Check
-        run: pnpm format:check
+      # - name: Prettier Format Check
+      #   run: pnpm format:check
 
       - name: TypeScript Check
         run: pnpm ts:check
