--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -17,7 +17,7 @@
     "safe-build": "pnpm run build || echo 'Build failed but continuing...'"
   },
   "dependencies": {
-    "@argent/tma-wallet": "^1.17.0",
+    "@argent/tma-wallet": "1.19.3",
     "@argent/x-sessions": "^6.7.4",
     "@avnu/avnu-sdk": "^2.0.0",
     "@chakra-ui/icons": "^2.2.4",
