--- a/.github/workflows/pwa.yml
+++ b/.github/workflows/pwa.yml
@@ -60,8 +60,8 @@ jobs:
 #      - name: Lint
 #        run: pnpm lint
 #
-      - name: TypeScript Check
-        run: pnpm ts:check
+      # - name: TypeScript Check
+      #   run: pnpm ts:check
 
       - name: Build
         run: pnpm build
