--- a/packages/pixel_ui/package.json
+++ b/packages/pixel_ui/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@argent/x-sessions": "^6.7.4",
+    "@argent/x-shared": "^1.32.1",
     "@starknet-react/chains": "^0.1.7",
     "@starknet-react/core": "^2.8.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "afk_react_sdk": "workspace:*",
+    "afk_sdk": "workspace:*",
+    "common": "workspace:*",
     "d3": "^7.9.0",
     "get-starknet-core": "^3.3.0",
     "js-sha256": "^0.11.0",
@@ -17,12 +22,7 @@
     "react-transition-group": "^4.4.5",
     "react-use-websocket": "^4.8.1",
     "starknet": "^6.9.0",
-    "@argent/x-sessions": "^6.7.4",
-    "@argent/x-shared": "^1.32.1",
-    "starknetkit-next": "npm:starknetkit@2.3.3",
-    "common": "workspace:*",
-    "afk_react_sdk": "workspace:*",
-    "afk_sdk": "workspace:*"
+    "starknetkit-next": "npm:starknetkit@2.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
