--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -52,9 +52,9 @@
     "react-transition-group": "^4.4.5",
     "react-use-websocket": "^4.8.1",
     "starknet": "6.9.0",
-    "starknetkit-next": "npm:starknetkit@2.3.3",
+    "starknetkit-next": "npm:starknetkit@^2.6.1",
     "viem": "~2.21.2",
-    "wagmi": "^2.12.8",
+    "wagmi": "^2.13.4",
     "zod": "^3.23.8",
     "zustand": "^4.5.2",
     "afk_react_sdk": "workspace:*",
