--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -132,6 +132,7 @@
     "react-native-webview-crypto": "^0.0.25",
     "starknet": "6.11.0",
     "starknetkit": "^1.1.9",
+    "starknetkit-next": "npm:starknetkit@^2.6.1",
     "text-encoding": "^0.7.0",
     "viem": "2.x",
     "wagmi": "^2.12.8",
