upgrade package starknetkit

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -62,8 +62,6 @@
     "@starknet-react/chains": "^3.1.0",
     "@starknet-react/core": "^3.5.0",
     "@starknet-react/kakarot": "^3.0.9",
-    "@starknet-wc/core": "0.0.4",
-    "@starknet-wc/react": "0.0.4",
     "@stripe/stripe-react-native": "0.38.6",
     "@tanstack/react-query": "^5.40.0",
     "@tanstack/react-query-persist-client": "5.40.0",
@@ -131,7 +129,7 @@
     "react-native-webview": "~13.6.4",
     "react-native-webview-crypto": "^0.0.25",
     "starknet": "6.11.0",
-    "starknetkit": "^1.1.9",
+    "starknetkit": "2.6.1",
     "starknetkit-next": "npm:starknetkit@^2.6.1",
     "text-encoding": "^0.7.0",
     "viem": "2.x",
