--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -17,7 +17,7 @@
     "noImplicitThis": true,
     "noImplicitReturns": true,
     "useUnknownInCatchVariables": false,
-    "moduleResolution": "nodenext",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "downlevelIteration": true,
