--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -50,6 +50,7 @@
     "@rainbow-me/rainbowkit": "^2.1.5",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/netinfo": "11.3.1",
+    "@react-native-community/slider": "^4.5.5",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.7.2",
