--- a/onchain/cairo/afk/Scarb.toml
+++ b/onchain/cairo/afk/Scarb.toml
@@ -14,6 +14,7 @@ alexandria_math = { git = "https://github.com/keep-starknet-strange/alexandria.g
 
 [dev-dependencies]
 snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.30.0" }
+assert_macros = "2.8.2"
 
 #[lib]
 
@@ -34,6 +35,6 @@ url = "https://starknet-mainnet.public.blastapi.io/rpc/v0_7"
 block_id.number = "615925"
 
 [[tool.snforge.fork]]
-name = "Sepolia"
+name = "SEPOLIA_LATEST"
 url = "https://starknet-sepolia.public.blastapi.io/rpc/v0_7"
-block_id.number = "615925"
+block_id.number = "latest"
