--- a/onchain/cairo/afk/Scarb.toml
+++ b/onchain/cairo/afk/Scarb.toml
@@ -34,6 +34,6 @@ url = "https://starknet-mainnet.public.blastapi.io/rpc/v0_7"
 block_id.number = "615925"
 
 [[tool.snforge.fork]]
-name = "Sepolia"
+name = "SEPOLIA_LATEST"
 url = "https://starknet-sepolia.public.blastapi.io/rpc/v0_7"
-block_id.number = "615925"
+block_id.number = "latest"
