--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -45,12 +45,12 @@
     "fluent-ffmpeg": "^2.1.3",
     "graphql": "^16.9.0",
     "helmet": "^7.2.0",
-    "indexer-prisma": "^1.0.0",
+    "indexer-prisma": "workspace:*",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "pg-promise": "^11.10.1",
-    "prisma-db": "^1.0.0",
+    "prisma-db": "workspace:*",
     "socket.io": "^4.8.1",
     "stripe": "^17.3.1",
     "telegraf": "^4.16.3",
