improve ui and start setup local dev docker WIP

--- a/apps/data-backend/.env.example
+++ b/apps/data-backend/.env.example
@@ -1,3 +1,5 @@
+NODE_ENV="development"
+
 TELEGRAM_WEB_APP="https://tg.afk-community.xyz"
 
 INDEXER_DATABASE_URL="postgresql://postgres:postgres@localhost:5434/indexer"
@@ -28,7 +30,7 @@ STARKNET_RPC_NETWORK="SN_SEPOLIA"  # SN_SEPOLIA, SN_MAIN
 RPC_NODE_API_KEY=""
 SN_NETWORK="SN_SEPOLIA"
 
-
+IS_TELEGRAM_BOT_RUNNING="false"
 # Cloudfare
 CLOUDFARE_ACCOUNT_ID=""
 CLOUDFARE_AUTH_TOKEN=""
