--- a/onchain/cairo/afk/Scarb.toml
+++ b/onchain/cairo/afk/Scarb.toml
@@ -13,7 +13,9 @@ stark_vrf = {git = "https://github.com/dojoengine/stark-vrf"}
 alexandria_math = { git = "https://github.com/keep-starknet-strange/alexandria.git" }
 
 [dev-dependencies]
-snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.30.0" }
+snforge_std = "0.31.0"
+openzeppelin_testing = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.18.0" }
+openzeppelin_utils = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.18.0" }
 
 #[lib]
 
