workflow ts undo

--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -60,8 +60,8 @@ jobs:
       # - name: ESLint Check
       #   run: pnpm lint
 
-      - name: TypeScript Check
-        run: pnpm ts:check
+      # - name: TypeScript Check
+      #   run: pnpm ts:check
 
       - name: Build
         run: pnpm build
