fix upload file

--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -28,6 +28,7 @@
     "@aws-sdk/client-s3": "^3.693.0",
     "@aws-sdk/lib-storage": "^3.693.0",
     "@fastify/cors": "^10.0.1",
+    "@fastify/multipart": "latest",
     "@fastify/oauth2": "8.1.0",
     "@fastify/session": "^11.0.1",
     "@fastify/static": "7.0.4",
@@ -38,11 +39,13 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
+    "data-backend": "link:",
     "dotenv": "^16.4.5",
     "fastify": "^5.1.0",
     "fastify-plugin": "^5.0.1",
     "fastify-socket.io": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
+    "form-data": "^4.0.2",
     "graphql": "^16.9.0",
     "helmet": "^7.2.0",
     "indexer-prisma": "workspace:*",
