--- a/apps/nestjs-indexer/package.json
+++ b/apps/nestjs-indexer/package.json
@@ -29,6 +29,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/event-emitter": "^3.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^6.0.0",
     "env-var": "^7.5.0",
