--- a/apps/indexer-v2/package.json
+++ b/apps/indexer-v2/package.json
@@ -2,8 +2,9 @@
   "name": "indexer-v2",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
-  "build": "apibara build",
+    "build": "apibara build",
     "dev": "apibara dev",
     "start": "apibara start",
     "lint": "biome check .",
@@ -19,6 +20,7 @@
     "@apibara/plugin-drizzle": "2.0.0-beta.27",
     "@apibara/protocol": "2.0.0-beta.38",
     "@apibara/starknet": "2.0.0-beta.38",
+    "apibara": "2.0.0-beta.38",
     "citty": "^0.1.6",
     "consola": "^3.2.3",
     "drizzle-orm": "^0.37.0",
@@ -26,12 +28,17 @@
     "nice-grpc": "^2.1.8",
     "pg": "^8.13.1",
     "starknet": "^6.11.0",
-    "viem": "^2.22.9"
+    "viem": "^2.22.9",
+    "@electric-sql/pglite": "^0.2.14"
   },
   "devDependencies": {
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/node": "^20.12.12",
-    "jiti": "^1.21.0",
     "@types/pg": "^8.11.10",
-    "drizzle-kit": "^0.29.0"
+    "drizzle-kit": "^0.29.0",
+    "jiti": "^1.21.0",
+    "typescript": "^5.6.2",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^1.6.0"
   }
 }
