--- a/scripts/package.json
+++ b/scripts/package.json
@@ -19,6 +19,7 @@
     "deploy:canvas_nft": "ts-node ./deploy/pixel/canvas_nft.ts",
     "deploy:chain_faction": "ts-node ./run/pixel/create_all_chain_faction.ts",
     "deploy:shield_setup": "ts-node ./run/pixel/shield_setup.ts",
+    "deploy:dao_factory": "ts-node ./deploy/dao_factory.ts",
     "get_hash": "ts-node ./run/utils/get_hash.ts",
     "dev": "ts-node index.ts",
     "relay": "ts-node src/index.ts",
@@ -27,15 +28,16 @@
   "dependencies": {
     "@noble/secp256k1": "^1.7.1",
     "@nostr-dev-kit/ndk": "^2.10.1",
+    "afk_prototype": "link:",
     "axios": "^1.7.2",
+    "common": "workspace:*",
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
     "nodemon": "^3.1.1",
     "nostr-tools": "^2.5.2",
     "path": "^0.12.7",
     "starknet": "^6.11.0",
-    "ws": "^8.17.0",
-    "common":"workspace:*"
+    "ws": "^8.17.0"
   },
   "devDependencies": {
     "@types/chai": "^4.3.16",
