--- a/apps/nestjs-indexer/package.json
+++ b/apps/nestjs-indexer/package.json
@@ -24,7 +24,7 @@
     "ts:check": "tsc --noEmit"
   },
   "dependencies": {
-    "@apibara/protocol": "^0.4.9",
+    "@apibara/protocol": "0.4.9",
     "@apibara/starknet": "^0.5.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
