--- a/indexer-v2/.gitignore
+++ b/indexer-v2/.gitignore
@@ -86,6 +86,7 @@ web_modules/
 # Next.js build output
 .next
 out
+next-env.d.ts
 
 # Nuxt.js build / generate output
 .nuxt
@@ -102,7 +103,6 @@ dist
 
 # vuepress v2.x temp and cache directory
 .temp
-.cache
 
 # Docusaurus cache and generated files
 .docusaurus
@@ -131,7 +131,12 @@ dist
 
 # next
 .next
-next-env.d.ts
 
 # prisma
 .prisma
+
+# apibara
+.apibara
+
+# drizzle
+.drizzle
