--- a/indexer-v2/package.json
+++ b/indexer-v2/package.json
@@ -2,11 +2,10 @@
   "name": "indexer-v2",
   "version": "0.0.1",
   "private": true,
-  "type": "module",
   "scripts": {
     "build": "apibara build",
     "dev": "apibara dev",
-    "start": "apibara start",
+    "start": "apibara start --indexer dao-factory",
     "lint": "biome check .",
     "lint:fix": "pnpm lint --write",
     "test": "vitest",
@@ -17,7 +16,7 @@
   "dependencies": {
     "@apibara/evm": "2.0.0",
     "@apibara/indexer": "2.0.0-beta.38",
-    "@apibara/plugin-drizzle": "2.0.0-beta.27",
+    "@apibara/plugin-drizzle": "2.0.0-beta.37",
     "@apibara/protocol": "2.0.0-beta.38",
     "@apibara/starknet": "2.0.0-beta.38",
     "apibara": "2.0.0-beta.38",
