--- a/packages/pixel_ui/tsconfig.json
+++ b/packages/pixel_ui/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "../../",
     "composite": true,
     "target": "ES6",
     "module": "ES6",
@@ -19,15 +19,25 @@
     "sourceMap": true,
     "noImplicitAny": false,
     "paths": {
-      "@/*": [
-        "./src/*"
-      ],
+      "@/*": ["./src/*"],
       "common": ["../common/src"],
       "afk_sdk": ["../afk_sdk/src"],
       "afk_react_sdk": ["../afk_react_sdk/src"]
-    },
+    }
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"],
-
+  "include": [
+    "src/**/*",
+    "../common/**/*",
+    "../afk_sdk/**/*",
+    "../afk_react_sdk/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ],
+  "references": [
+    { "path": "../common" },
+    { "path": "../afk_sdk" },
+    { "path": "../afk_react_sdk" }
+  ]
 }
