feat: index all dao events

--- a/apps/indexer-v2/.env.example
+++ b/apps/indexer-v2/.env.example
@@ -1,2 +1,2 @@
-POSTGRES_CONNECTION_STRING=postgres://postgres:postgres@localhost:5432/postgres
-DNA_TOKEN_ADDRESS=fdfsfsd
+INDEXER_V2_DATABASE_URL=postgres://postgres:postgres@localhost:5435/indexer
+DNA_TOKEN_ADDRESS=
