--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -41,6 +41,7 @@
     "cors": "^2.8.5",
     "data-backend": "link:",
     "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.37.0",
     "fastify": "^5.1.0",
     "fastify-plugin": "^5.0.1",
     "fastify-socket.io": "^5.1.0",
@@ -49,6 +50,7 @@
     "graphql": "^16.9.0",
     "helmet": "^7.2.0",
     "indexer-prisma": "workspace:*",
+    "indexer-v2-db": "workspace:*",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
