chore: add gh workflow + fix build

--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "build:index": "tsc",
     "build:all_repo": "pnpm run build:all",
-    "build:all": "pnpm -w run build:indexer-prisma && pnpm -w run build:prisma-db && pnpm build",
+    "build:all": "pnpm -w run build:indexer-prisma && pnpm -w run build:prisma-db && pnpm -w run build:indexer-v2-db && pnpm build",
     "build:prisma": "",
     "start": "ts-node src/index.ts",
     "start:dev": "ts-node-dev src/index.ts",
