--- a/.github/workflows/indexer-v2.yml
+++ b/.github/workflows/indexer-v2.yml
@@ -57,8 +57,8 @@ jobs:
       - name: Build
         run: pnpm build:all
 
-      - name: TypeScript Check
-        run: pnpm ts:check
+      #      - name: TypeScript Check
+      #        run: pnpm ts:check
 
       # - name: Prettier Format Check
       #   run: pnpm format:check
