--- a/apps/indexer-v2/package.json
+++ b/apps/indexer-v2/package.json
@@ -4,14 +4,13 @@
   "private": true,
   "scripts": {
     "build": "apibara build",
+    "build:db": "pnpm -w run build:indexer-v2-db",
+    "build:all": "pnpm build:db && pnpm build",
     "dev": "apibara dev",
-    "start": "apibara start --indexer dao-factory",
+    "start": "apibara start",
     "lint": "biome check .",
     "lint:fix": "pnpm lint --write",
-    "test": "vitest",
-    "drizzle:generate": "drizzle-kit generate",
-    "drizzle:migrate": "drizzle-kit migrate",
-    "drizzle:studio": "drizzle-kit studio"
+    "test": "vitest"
   },
   "dependencies": {
     "@apibara/evm": "2.0.1-beta.30",
@@ -20,6 +19,7 @@
     "@apibara/protocol": "2.0.0-beta.40",
     "@apibara/starknet": "2.0.0-beta.40",
     "apibara": "2.0.0-beta.40",
+    "drizzle-orm": "^0.37.0",
     "indexer-v2": "link:",
     "indexer-v2-db": "workspace:*",
     "starknet": "^6.11.0",
