--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -132,7 +132,7 @@
     "starknet": "6.11.0",
     "starknetkit": "^2.6.1",
     "text-encoding": "^0.7.0",
-    "viem": "2.x",
+    "viem": "2.21.60",
     "wagmi": "^2.12.8",
     "zustand": "^4.5.2"
   },
