--- a/apps/data-backend/.env.example
+++ b/apps/data-backend/.env.example
@@ -25,9 +25,9 @@ CLOUDINARY_API_KEY=""
 CLOUDINARY_API_SECRET=""
 
 # Starknet
-STARKNET_RPC_PROVIDER_URL=""
+STARKNET_RPC_PROVIDER_URL="www.rpc.com"
 STARKNET_RPC_NETWORK="SN_SEPOLIA"  # SN_SEPOLIA, SN_MAIN
-RPC_NODE_API_KEY=""
+RPC_NODE_API_KEY="a2649"
 SN_NETWORK="SN_SEPOLIA"
 
 IS_TELEGRAM_BOT_RUNNING="false"
