--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -76,6 +76,8 @@
     "buffer": "^6.0.3",
     "common": "workspace:*",
     "crypto-es": "^2.1.0",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "events": "^3.3.0",
     "expo": "~51.0.38",
     "expo-application": "^5.9.1",
@@ -102,8 +104,10 @@
     "hls.js": "^1.5.17",
     "install": "^0.13.0",
     "jsqr": "^1.4.0",
+    "lightweight-charts": "^5.0.3",
     "memoize-one": "^6.0.0",
     "metro-react-native-babel-preset": "^0.77.0",
+    "mobile": "link:",
     "npx": "^10.2.2",
     "path": "^0.12.7",
     "pbkdf2": "^3.1.2",
@@ -129,6 +133,7 @@
     "react-native-web": "~0.19.6",
     "react-native-webview": "~13.6.4",
     "react-native-webview-crypto": "^0.0.25",
+    "react-ts-tradingview-widgets": "^1.2.8",
     "starknet": "6.11.0",
     "starknetkit": "^2.6.1",
     "text-encoding": "^0.7.0",
@@ -139,6 +144,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@types/echarts": "^5.0.0",
     "@types/pbkdf2": "^3.1.2",
     "@types/react": "~18.3.1",
     "@uniswap/eslint-config": "^1.2.0",
