--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -70,6 +70,7 @@
     "@walletconnect/react-native-compat": "2.16.1",
     "@webbtc/webln-types": "^2.1.0",
     "afk_nostr_sdk": "workspace:*",
+    "afk-abi": "workspace:*",
     "axios": "^1.7.2",
     "babel-plugin-module-resolver": "^5.0.2",
     "bip39": "^3.1.0",
