env changes and schema changes

--- a/apps/data-backend/.env.example
+++ b/apps/data-backend/.env.example
@@ -25,9 +25,9 @@ CLOUDINARY_API_KEY=""
 CLOUDINARY_API_SECRET=""
 
 # Starknet
-STARKNET_RPC_PROVIDER_URL="www.rpc.com"
+STARKNET_RPC_PROVIDER_URL=""
 STARKNET_RPC_NETWORK="SN_SEPOLIA"  # SN_SEPOLIA, SN_MAIN
-RPC_NODE_API_KEY="a2649"
+RPC_NODE_API_KEY=""
 SN_NETWORK="SN_SEPOLIA"
 
 IS_TELEGRAM_BOT_RUNNING="false"
@@ -47,6 +47,11 @@ TWITTER_CALLBACK_URL="http://localhost:8081/app/SocialPayment"
 
 TWITTER_CLIENT_ID=""
 TWITTER_CLIENT_SECRET=""
+
+
+
+
+
 
 
 
