--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -103,8 +103,10 @@
     "hls.js": "^1.5.17",
     "install": "^0.13.0",
     "jsqr": "^1.4.0",
+    "lightweight-charts": "^5.0.3",
     "memoize-one": "^6.0.0",
     "metro-react-native-babel-preset": "^0.77.0",
+    "mobile": "link:",
     "npx": "^10.2.2",
     "path": "^0.12.7",
     "pbkdf2": "^3.1.2",
